[package]
name = "bark"
version = "0.1.0"
edition = "2021"
authors = ["66f94eae <66f94eae@gmail.com>"]
description = "This a cli tool for send notification to your device"
homepage = "https://github.com/66f94eae/bark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.15", features = ["derive"]}
openssl = "0.10.66"
openssl-sys = "0.9.103"
reqwest = { version = "0.12.5", features = ["blocking"]}


[build-dependencies]
chrono = "0.4.38"
git2 = "0.19.0"