[package]
name = "bark"
version = "0.2.1"
edition = "2021"
authors = ["66f94eae <66f94eae@gmail.com>"]
description = "This a cli tool for send notification to your device"
homepage = "https://github.com/66f94eae/bark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bark-dev = "0.1.8"
clap = {version = "4.5.15", features = ["derive"]}
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"


[build-dependencies]
chrono = "0.4.38"
git2 = "0.19.0"
